# gdg-hackathon

./: README.md  database.py  main.py  model.py  pyproject.toml  styles.css  utils.py
